# ice-pulse-sensor-firmware

./: .gitignore  README.md
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy-staging.yml
device-tools/: flash.sh  monitor.sh  provisioning.py
device-tools/test/: calibration_test.py  environmental_test.py  hardware_test.py
firmware/: CMakeLists.txt
firmware/configuration/: partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Main.c  config.h  main.c  version.h
scripts/: build.sh  production_test.sh
